--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "exalunos",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "routes.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon routes.js"
   },
   "author": "",
   "license": "ISC",
