--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "exalunos",
   "version": "1.0.0",
   "description": "",
-  "main": "routes.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon routes.js"
+    "dev": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
